PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_16-268_erreur_tableau/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: size of array ‘a’ is negative
    2 |     int a [-9];
      |         ^

return code: 1
